# hubullu-lang

./: .gitignore  Cargo.toml  README.md  lsp-surface-forms.md  spec.md
docs/: 01-getting-started.md  02-language-basics.md  03-tagaxes-and-extends.md  04-inflection.md  05-entries.md  06-imports.md  07-templates.md  08-phonrules.md  08-real-world-examples.md  09-real-world-examples.md  09-reference.md  10-reference.md  11-postprocessor.md
examples/arabic/: main.hu  profile.hu  sentences.hut  verbs.hu
examples/chinese/: main.hu  profile.hu  sentences.hut  words.hu
examples/dutch/: main.hu  nouns.hu  profile.hu  sentences.hut  verbs.hu
examples/english/: main.hu  nouns.hu  profile.hu  sentences.hut  verbs.hu
examples/latin/: genesis.hut  genesis_words.hu  main.hu  nouns.hu  profile.hu  sentences.hut  verbs.hu
examples/turkish/: main.hu  nouns.hu  profile.hu  sentences.hut  verbs.hu
fixtures/comprehensive/: adjectives.hu  main.hu  nouns.hu  profile.hu  verbs.hu
fixtures/errors/: ambiguous_rules.hu  bad_import_entry.hu  bad_import_kind.hu  bad_import_ref.hu  circular_a.hu  circular_b.hu  cyclic_derived_from.hu  duplicate_symbol.hu  extend_unknown_axis.hu  helpers.hu  missing_import.hu  missing_inflection_class.hu  no_rule_matches.hu  phonrule_not_found_apply.hu  slot_no_rule_matches.hu  undeclared_axis_inflection.hu  undefined_stem.hu  unknown_std_module.hu  (+1 more)
src/: ast.rs  cache.rs  dag.rs  emit_sqlite.rs  error.rs  inflection_eval.rs  lexer.rs  lib.rs  lint.rs  main.rs  merkle.rs  parser.rs  phase1.rs  phase2.rs  phonrule_eval.rs  render.rs  render_html.rs  skill.rs  span.rs  stdlib.rs  symbol_table.rs  token.rs  visit.rs
std/: _test.hu
tests/: error_tests.rs  integration.rs  lint_tests.rs  lsp_shutdown_tests.rs  lsp_tests.rs
(+29 files in other folders)
