[package]
name = "hubullu"
version = "0.1.0"
edition = "2021"
description = "Hubullu compiler — compiles .hu artificial natural language dictionary files to .huc"
license = "MIT"
rust-version = "1.70"

[features]
default = ["sqlite", "cli"]
sqlite = ["dep:rusqlite", "dep:sha2"]
cli = ["dep:clap", "sqlite", "lsp"]
serialization = ["dep:serde"]
lsp = ["dep:crossbeam-channel", "dep:lsp-server", "dep:lsp-types", "dep:serde_json", "serialization"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
sha2 = { version = "0.10", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
crossbeam-channel = { version = "0.5", optional = true }
lsp-server = { version = "0.7", optional = true }
lsp-types = { version = "0.97", optional = true }
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
unicode-xid = "0.2"

[[bin]]
name = "hubullu"
required-features = ["cli"]

[dev-dependencies]
insta = "1"
tempfile = "3"
